fixed spacing

--- a/src/styles/pages/event/regional-state.module.scss
+++ b/src/styles/pages/event/regional-state.module.scss
@@ -77,6 +77,7 @@
 .third_section {
   display: flex;
   gap: 16px;
+  margin-bottom: 202px;
 }
 
 .third_walk_card,
@@ -133,7 +134,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 24px;
-  margin-top: 16px;
+  margin: 16px 0;
 }
 
 .getInvolved {
